--- a/VulkanDrv/VulkanDrv.vcxproj
+++ b/VulkanDrv/VulkanDrv.vcxproj
@@ -104,7 +104,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DeusExDebug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>$(SolutionDir)Build\$(Configuration)\</OutDir>
+    <OutDir>..\..\..\..\..\..\Program Files %28x86%29\Steam\steamapps\common\Deus Ex\System</OutDir>
     <IntDir>$(SolutionDir)Build\$(Configuration)\$(ProjectName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='UnrealGoldDebug|Win32'">
@@ -161,6 +161,7 @@
       <ExceptionHandling>Async</ExceptionHandling>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>Precomp.h</PrecompiledHeaderFile>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -269,6 +270,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="BufferManager.h" />
+    <ClInclude Include="bvh.h" />
     <ClInclude Include="CommandBufferManager.h" />
     <ClInclude Include="DescriptorSetManager.h" />
     <ClInclude Include="FileResource.h" />
@@ -293,6 +295,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BufferManager.cpp" />
+    <ClCompile Include="bvh.cpp" />
     <ClCompile Include="CommandBufferManager.cpp" />
     <ClCompile Include="DescriptorSetManager.cpp" />
     <ClCompile Include="FileResource.cpp" />
