Export the level as a glTF file
I think that I'll use this later to process the geometry outside of the
game (meshlets? lightmaps?). I can then ingest the processed geometry
instead of working with Unreal's internal representation.

We'll see.

--- a/VulkanDrv/VulkanDrv.vcxproj
+++ b/VulkanDrv/VulkanDrv.vcxproj
@@ -273,7 +273,35 @@
     <ClInclude Include="DescriptorSetManager.h" />
     <ClInclude Include="FileResource.h" />
     <ClInclude Include="FramebufferManager.h" />
+    <ClInclude Include="gltf.h" />
     <ClInclude Include="halffloat.h" />
+    <ClInclude Include="libs\glm\common.hpp" />
+    <ClInclude Include="libs\glm\exponential.hpp" />
+    <ClInclude Include="libs\glm\ext.hpp" />
+    <ClInclude Include="libs\glm\fwd.hpp" />
+    <ClInclude Include="libs\glm\geometric.hpp" />
+    <ClInclude Include="libs\glm\glm.hpp" />
+    <ClInclude Include="libs\glm\integer.hpp" />
+    <ClInclude Include="libs\glm\mat2x2.hpp" />
+    <ClInclude Include="libs\glm\mat2x3.hpp" />
+    <ClInclude Include="libs\glm\mat2x4.hpp" />
+    <ClInclude Include="libs\glm\mat3x2.hpp" />
+    <ClInclude Include="libs\glm\mat3x3.hpp" />
+    <ClInclude Include="libs\glm\mat3x4.hpp" />
+    <ClInclude Include="libs\glm\mat4x2.hpp" />
+    <ClInclude Include="libs\glm\mat4x3.hpp" />
+    <ClInclude Include="libs\glm\mat4x4.hpp" />
+    <ClInclude Include="libs\glm\matrix.hpp" />
+    <ClInclude Include="libs\glm\packing.hpp" />
+    <ClInclude Include="libs\glm\trigonometric.hpp" />
+    <ClInclude Include="libs\glm\vec2.hpp" />
+    <ClInclude Include="libs\glm\vec3.hpp" />
+    <ClInclude Include="libs\glm\vec4.hpp" />
+    <ClInclude Include="libs\glm\vector_relational.hpp" />
+    <ClInclude Include="libs\json.hpp" />
+    <ClInclude Include="libs\stb_image.h" />
+    <ClInclude Include="libs\stb_image_write.h" />
+    <ClInclude Include="libs\tiny_gltf.h" />
     <ClInclude Include="mat.h" />
     <ClInclude Include="Precomp.h" />
     <ClInclude Include="quaternion.h" />
@@ -284,6 +312,7 @@
     <ClInclude Include="ShaderManager.h" />
     <ClInclude Include="TextureManager.h" />
     <ClInclude Include="TextureUploader.h" />
+    <ClInclude Include="tinygltf.h" />
     <ClInclude Include="UploadManager.h" />
     <ClInclude Include="UTF16.h" />
     <ClInclude Include="UVulkanRenderDevice.h" />
@@ -297,6 +326,7 @@
     <ClCompile Include="DescriptorSetManager.cpp" />
     <ClCompile Include="FileResource.cpp" />
     <ClCompile Include="FramebufferManager.cpp" />
+    <ClCompile Include="gltf.cpp" />
     <ClCompile Include="halffloat.cpp" />
     <ClCompile Include="mat.cpp" />
     <ClCompile Include="Precomp.cpp">
@@ -313,6 +343,7 @@
     <ClCompile Include="ShaderManager.cpp" />
     <ClCompile Include="TextureManager.cpp" />
     <ClCompile Include="TextureUploader.cpp" />
+    <ClCompile Include="tinygltf.cpp" />
     <ClCompile Include="UploadManager.cpp" />
     <ClCompile Include="UTF16.cpp" />
     <ClCompile Include="UVulkanRenderDevice.cpp" />
